methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:15: error: not found: value oui
      return oui
             ^MethodsReturning:4: error: type mismatch;
 found   : Unit
 required: Boolean
  for(compteur <- 1 to 7){
               ^